--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
       <div class="container mt-5">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2 class="mt-3">My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
