menambah file gambar

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#">Juan Sukaton</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +33,8 @@
     </nav>
     <!-- akhir Navbar -->
 
-    <section class="jumbotron text-center">
-      <img src="gbku.jpg" alt="" width="200" class="rounded-circle img-thumbnail" data-aos="fade-down" />
+    <section class="jumbotron text-center pt-4">
+      <img src="gbku.jpg" alt="" width="200" class="rounded-circle img-thumbnail " data-aos="fade-down" />
       <h1 class="display-4 pt-4" data-aos="fade-right">Juan Sukaton</h1>
       <p data-aos="fade-left" class="lead pb-5">Front End</p>
     </section>
@@ -67,7 +67,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="code.jpg" class="card-img-top" alt="..." />
+              <img src="keyboard1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up the bulk of the card's content Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor officia voluptates, dicta totam minima! Nesciunt,
@@ -78,15 +78,18 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="net.jpg" class="card-img-top" alt="..." />
+              <img src="keyboard6.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ad distinctio molestiae expedita vel recusandae a deleniti delectus unde! Placeat repellendus maxime ad id nulla sint, aliquam quis earum quos quo corrupti eos
+                  beatae, nihil animi! Error sapiente recusandae libero in optio, sequi nemo dicta aliquam dolorum, sed illum! Ea?
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="sosmed.jpg" class="card-img-top" alt="..." />
+              <img src="keyboard3.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up the bulk of the card's content Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, aliquid! Lorem ipsum dolor sit amet consectetur Lorem,
@@ -97,7 +100,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="mon2.jpg" class="card-img-top" alt="..." />
+              <img src="keyboard4.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up the bulk of the card's content Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto numquam assumenda, quae nemo architecto cupiditate. Lorem ipsum,
@@ -108,9 +111,12 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="mon1.jpg" class="card-img-top" alt="..." />
+              <img src="keyboard5.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur quam dicta esse libero beatae, accusantium natus repellat consectetur aut, totam expedita, non iusto animi? Explicabo dolorem quidem obcaecati optio!
+                  Perspiciatis voluptatem odio quia exercitationem ratione ea expedita fuga nobis placeat!
+                </p>
               </div>
             </div>
           </div>
