mengubah margin top

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,14 @@
     </nav>
     <!-- akhir Navbar -->
 
-    <section class="jumbotron text-center pt-4">
-      <img src="gbku.jpg" alt="" width="200" class="rounded-circle img-thumbnail " data-aos="fade-down" />
+    <section class="jumbotron text-center mt-5">
+      <img src="gbku.jpg" alt="" width="200" class="rounded-circle img-thumbnail" data-aos="fade-down" />
       <h1 class="display-4 pt-4" data-aos="fade-right">Juan Sukaton</h1>
       <p data-aos="fade-left" class="lead pb-5">Front End</p>
     </section>
 
     <section id="about">
-      <div class="container">
+      <div class="container mt-5">
         <div class="row text-center mb-3">
           <div class="col">
             <h2 class="mb-5">About Me</h2>
