--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus a ad perspiciatis nulla maiores est neque praesentium ipsam, similique earum.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, expedita magnam nostrum nisi fuga iste et sapiente eum dicta quam explicabo id nam voluptate iure.</p>
           </div>
           <div class="col-md-4">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, expedita magnam nostrum nisi fuga iste et sapiente eum dicta quam explicabo id nam voluptate iure.</p>
@@ -123,6 +123,45 @@
         </div>
       </div>
     </section>
+
+    <div class="container">
+      <div class="row text-center mt-5 mb-3">
+        <div class="col">
+          <h2>Contact Me</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+            <strong>Pesan terkirim!</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="my-contact">
+            <div class="mb-3">
+              <label for="name" class="form-label">Nama Lengkap</label>
+              <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email </label>
+              <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
+            </div>
+            <div class="mb-3">
+              <label for="pesan" class="form-label">Pesan</label>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-kirim">kirim</button>
+            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+              <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <footer class="warna mt-3 text-center pb-3">
+      <p class="pt-4">Created by <a href="https://instagram.com/juan.sukaton07" class="text-dark fw-bold">juan sukaton</a></p>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
@@ -130,5 +169,30 @@
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbx_941VVEHnQYiSKvDphTNSalnvLX0_Vmi2ekhJ7l9rIcfjAQRaiazcTMegp7CIaiW9/exec';
+      const form = document.forms['my-contact'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myalert = document.querySelector('.alert');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        // ketika submit di klik
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            // alert
+            myalert.classList.toggle('d-none');
+
+            form.reset();
+            console.log('Success!', response);
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
