nambahkan id contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,40 +124,42 @@
       </div>
     </section>
 
-    <div class="container">
-      <div class="row text-center mt-5 mb-3">
-        <div class="col">
-          <h2>Contact Me</h2>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
-            <strong>Pesan terkirim!</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <section id="contact">
+      <div class="container">
+        <div class="row text-center mt-5 mb-3">
+          <div class="col">
+            <h2>Contact Me</h2>
           </div>
-          <form name="my-contact">
-            <div class="mb-3">
-              <label for="name" class="form-label">Nama Lengkap</label>
-              <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Pesan terkirim!</strong>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email </label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
-            </div>
-            <div class="mb-3">
-              <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-kirim">kirim</button>
-            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-              <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-              Loading...
-            </button>
-          </form>
+            <form name="my-contact">
+              <div class="mb-3">
+                <label for="name" class="form-label">Nama Lengkap</label>
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email </label>
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
+              </div>
+              <div class="mb-3">
+                <label for="pesan" class="form-label">Pesan</label>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary btn-kirim">kirim</button>
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer class="warna mt-3 text-center pb-3">
       <p class="pt-4">Created by <a href="https://instagram.com/juan.sukaton07" class="text-dark fw-bold">juan sukaton</a></p>
